force-app/main/default/objects/ProdRatePlan__c/ProdRatePlan__c.object-meta.xml
<CustomObject>
    <description>Objet qui contient les objets zuora, ne fait pas partie de Z360</description>
    <label>Prod Rate Plan</label>
    <nameField>
        <label>Nom Produit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Rate Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>