force-app/main/default/objects/ProdRatePlan__c/fields/CreatedZDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedZDate__c</fullName>
    <label>CreatedZDate</label>
    <type>DateTime</type>
</CustomField>