force-app/main/default/objects/ProdRatePlan__c/fields/EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveEndDate__c</fullName>
    <label>EffectiveEndDate</label>
    <type>Date</type>
</CustomField>