force-app/main/default/objects/ProdRatePlan__c/fields/EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDate__c</fullName>
    <label>EffectiveStartDate</label>
    <type>Date</type>
</CustomField>