force-app/main/default/objects/ProdRatePlan__c/fields/Entite__c.field-meta.xml
<CustomField>
    <fullName>Entite__c</fullName>
    <label>Entite</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
                <default>true</default>
                <label>France</label>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>