force-app/main/default/objects/ProdRatePlan__c/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille</label>
    <length>10</length>
    <type>Text</type>
</CustomField>