force-app/main/default/objects/ProdRatePlan__c/fields/isProduit__c.field-meta.xml
<CustomField>
    <fullName>isProduit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProduit</label>
    <type>Checkbox</type>
</CustomField>