force-app/main/default/objects/ProdRatePlan__c/fields/ProductZID__c.field-meta.xml
<CustomField>
    <fullName>ProductZID__c</fullName>
    <label>ProductZID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>