force-app/main/default/objects/ProdRatePlan__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>