force-app/main/default/objects/ProdRatePlan__c/fields/ReferenceCIC__c.field-meta.xml
<CustomField>
    <fullName>ReferenceCIC__c</fullName>
    <label>ReferenceCIC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>