force-app/main/default/objects/ProdRatePlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Reference__c</columns>
    <columns>ReferenceCIC__c</columns>
    <columns>Famille__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>isProduit__c</columns>
    <columns>zid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>